--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
+alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
+APScheduler==3.10.4
 attrs==23.2.0
 Automat==22.10.0
 certifi==2024.7.4
@@ -27,6 +29,7 @@ itemloaders==1.3.1
 Jinja2==3.1.4
 jmespath==1.0.1
 lxml==5.2.2
+Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -44,6 +47,7 @@ Pygments==2.18.0
 pyOpenSSL==24.1.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 queuelib==1.7.0
 requests==2.32.3
@@ -55,11 +59,13 @@ setuptools==70.3.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.31
 starlette==0.37.2
 tldextract==5.1.2
 Twisted==24.3.0
 typer==0.12.3
 typing_extensions==4.12.2
+tzlocal==5.2
 ujson==5.10.0
 urllib3==2.2.2
 uvicorn==0.30.1
